--- a/main.html
+++ b/main.html
@@ -22,11 +22,15 @@
 </div>
 </nav>
 	<h2><u>3 random audios</u></h2>
+	<div>
 	<audio src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3"  type="audio/mpeg" controls>random1</audio>
-	<br>
+	</div>
+	<div>
 	<audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg"  type="audio/mpeg" controls>random1</audio>
-	<br>
+	</div>
+	<div>
 	<audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg"  type="audio/mpeg" controls>random1</audio>
+</div>
 </body>
 
 </html>
