--- a/main.html
+++ b/main.html
@@ -23,12 +23,15 @@
 </nav>
 	<h2><u>3 random audios</u></h2>
 	<div>
-	<audio src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3"  type="audio/mpeg" controls>random1</audio>
+		<h4>random 1</h4>
+	<audio src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3"  type="audio/mpeg" controls></audio>
 	</div>
 	<div>
+		<h4>random 2</h4>
 	<audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg"  type="audio/mpeg" controls>random1</audio>
 	</div>
 	<div>
+		<h4>random 3</h4>
 	<audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg"  type="audio/mpeg" controls>random1</audio>
 </div>
 </body>
